<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:textSize="25sp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/speakerIcon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/speakerIcon"
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/profileBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:srcCompat="@drawable/ic_baseline_volume_up_24" />

        <Button
            android:id="@+id/profileBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:onClick="goToProfile"
            app:layout_constraintBottom_toTopOf="@id/libraryBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speakerIcon" />

        <Button
            android:id="@+id/libraryBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:onClick="goToLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>